--- a/bonapart-frontend/frontend/css/animation-plus.css
+++ b/bonapart-frontend/frontend/css/animation-plus.css
@@ -1,9 +1,52 @@
-.item-detail .add-to-card .add-to-basket{
+.btn-fromLeft{
     position: relative;	
 	padding: 1.4rem 4.2rem;
 	padding-right: 3.1rem;
 	transition: all 500ms cubic-bezier(0.77, 0, 0.175, 1);	
 	cursor: pointer;
 	user-select: none;
-    /* background-color: blue!important; */
+}
+.btn-fromLeft:before, 
+.btn-fromLeft:after {
+	content: '';
+	position: absolute;	
+	transition: inherit;
+	z-index: -1;
+}
+
+.btn-fromLeft:hover {
+	color: var(--def);
+	transition-delay: .5s;
+}
+
+.btn-fromLeft:hover:before {
+	transition-delay: 0s;
+}
+
+.btn-fromLeft:hover:after {
+	background: var(--inv);
+	transition-delay: .35s;
+}
+
+.from-left:before, 
+.from-left:after {
+	top: 0;
+	width: 0;
+	height: 100%;
+}
+
+.from-left:before {
+	right: 0;
+	border: 1px solid var(--inv);
+	border-left: 0;
+	border-right: 0;	
+}
+
+.from-left:after {
+	left: 0;
+}
+
+.from-left:hover:before,
+.from-left:hover:after {
+	width: 100%;
 }
