--- a/bonapart-frontend/frontend/css/still.css
+++ b/bonapart-frontend/frontend/css/still.css
@@ -184,6 +184,7 @@ header .hamburger-menu{
     background-repeat: no-repeat;
     width: 61px;
     height: 39px;
+    cursor: pointer;
 }
 .banner .search-bar-banner{
     margin: 0 auto;
@@ -235,6 +236,10 @@ header .navigation ul li{
     list-style: none;
     display: inline-block;
     width: 50px;
+    transition: all .3s;
+}
+header .navigation ul li:hover{
+    margin-bottom: 10px;
 }
 header .navigation ul li:not(:last-child){
     margin-right: 25px;
@@ -596,6 +601,9 @@ header .navigation ul li a{
     padding: 57px 132px 0px 132px;
     display: flex;
     flex-direction: column;
+}
+.product-search-area #sis-content{
+
 }
 
 /* page 2 */
@@ -1492,7 +1500,6 @@ header .navigation ul li a{
     font-size: 13px;
     padding: 10px 15px;
     border-radius: 5px;
-    color: #ffff;
     font-style: normal;
 }
 #open-search .item-box .marketing .add-card{
@@ -1862,6 +1869,7 @@ scrollbar-width: none; /* Firefox */
     width: 100%;
     height: 240px;
     margin-bottom: 15px;
+    cursor: pointer;
 }
 .most-search-cat .cat-pic img{
     width: 100%;
@@ -2273,7 +2281,7 @@ footer .copyright-nav ul li{
     font-size: 20px;
 }
 footer .copyright-nav ul a:hover{
-    color: #000;
+    color: rgba(39, 39, 39, 0.692);
 }
 footer .copyright-nav ul a:not(:last-child){
     margin-right: 40px;
