--- a/atom-proje/frontend/css/animation-plus.css
+++ b/atom-proje/frontend/css/animation-plus.css
@@ -50,3 +50,7 @@
 .from-left:hover:after {
 	width: 100%;
 }
+
+.shine-animation{position:relative;overflow:hidden;}.shine-animation::before{position:absolute;top:0;left:-75%;z-index:2;display:block;content:'';width:50%;height:100%;background:-webkit-linear-gradient(left,rgba(255,255,255,0) 0%,rgba(255,255,255,.3) 100%);background:linear-gradient(to right,rgba(255,255,255,0) 0%,rgba(255,255,255,.3) 100%);-webkit-transform:skewX(-25deg);transform:skewX(-25deg)}.shine-animation:hover::before{-webkit-animation:shine 1s;animation:shine 1s}@-webkit-keyframes shine{100%{left:125%}}@keyframes shine{100%{left:125%}}
+
+
