--- a/atom-proje/frontend/css/still.css
+++ b/atom-proje/frontend/css/still.css
@@ -26,10 +26,29 @@ h3{
     font-size: 40px;
     font-weight: bold;
 }
-@media screen and (max-width:768px) {
+@media screen and (max-width:1200px) {
     h3{
-        font-size: 35px;
+        font-size: 35px!important;
     }
+}
+
+@media screen and (max-width:767px) {
+    p{
+        font-size: 15px!important;
+    }
+    
+}
+.bg-1{
+    background-color: var(--main-b)!important;
+}
+.bg-2{
+    background-color: var(--main-b-2)!important;
+}
+.bg-3{
+    background-color: #404040!important;
+}
+.bg-t-3{
+    color: #404040!important;
 }
 
 :root{
@@ -137,6 +156,15 @@ h3{
     background-color: var(--main-b);
 
 }
+@media screen and (max-width:1200px) {
+    .main .banner {
+        height: 70vh;
+    }
+    .banner::before{
+        width: 100%;
+    }
+}
+
 /* .main::before{
     position: absolute;
     content: "";
@@ -156,6 +184,39 @@ header{
     z-index: 200;
     transition: .3s;
     background-color: var(--main-b);
+}
+.banner header{
+    display: flex;
+    height: 80px;
+    width: 100%;
+    align-items: center;
+    padding: 0px 100px;
+    z-index: 200;
+    transition: .3s;
+    background-color: transparent;
+    position: absolute;
+    top: 0;
+}
+@media screen and (max-width:1200px) {
+    .banner .slide-wrapper{
+        display: none;
+    }
+    .banner .ourServicesSlide{
+        display: block!important;
+    }
+    header{
+        justify-content: space-between;
+        padding: 0 30px;
+    }
+    header nav{
+        display: none;
+    }
+    header .banner-social{
+        display: none!important;
+    }
+    header .hamburger{
+        display: block;
+    }
 }
 header.sticky{
     margin: 0!important;
@@ -209,7 +270,7 @@ header nav ul li a:hover{
 
     position: absolute;
     width: 600px;
-    top: 0;
+    top: 2px;
     left: 0;
     margin-top: 25px;
     padding: 32px 0px 23px 0px;
@@ -322,7 +383,7 @@ header .banner-social a:last-child{
 
 .slide-wrapper{
     position: relative;
-    height: 806px;
+    height: 900px;
     display: flex;
     width: 100%;
     z-index: 10;
@@ -396,31 +457,28 @@ header .banner-social a:last-child{
 
 .slide-wrapper .slide-item .slide-image{
     position: relative;
-    z-index: 10;
+    top: 100px;
+    z-index: 50;
+    width: 100%;
 }
 .slide-wrapper .slide-item .slide-image::before{
     content: "";
     position: absolute;
     width: 100%;
-    height: 89%;
+    height: 100%;
     border: 4px solid var(--main-y);
     margin-left: -30px;
-    margin-top: 130px;
+    margin-top: 30px;
     z-index: -1;
 }
-.slide-wrapper .slide-item .slide-image img{
-    object-fit: cover;
-    margin-top: 100px;
-    max-height: 806px;
 
-}
 
 
 
 /* .slick-list{
     overflow-y: hidden!important;
 } */
-.banner .slick-dots{
+.slide-wrapper .slick-dots{
     top: 50%;
     left: 0!important;
     display: flex!important;
@@ -430,7 +488,7 @@ header .banner-social a:last-child{
     margin-left: 100px!important;
     margin-top: 150px!important;
 }
-.banner .slick-dots li button:before {
+.slide-wrapper .slick-dots li button:before {
     content: ""!important;
     position: absolute;
     width: 8px!important;
@@ -493,6 +551,17 @@ header .banner-social a:last-child{
 .go-visit span{
     color: #fff;
 }
+@media screen and (max-width:1200px) {
+    .banner .slick-dots li.slick-active button:before {
+
+        border-radius: 50%;
+    }
+}
+
+
+
+
+
 
 /* ------------  */
 .services {
@@ -503,6 +572,7 @@ header .banner-social a:last-child{
     align-items: center;
     justify-content: center;
     transition: all .3s;
+    padding: 70px 0px;
 }
 .services::before{
     content: "";
@@ -596,6 +666,36 @@ header .banner-social a:last-child{
     .services {
         height: auto;
     }
+    .services h3{
+        font-size: 35px!important;
+    }
+}
+@media screen and (max-width:768px) {
+    .services-slider .item-img{
+        width: 350px;
+    }
+    .services h3{
+        margin-top: 50px;
+        font-size: 30px!important;
+    }
+    .services p{
+        font-size: 15px!important;
+        line-height: 25px!important;
+    }
+}
+@media screen and (max-width:767px) {
+    .services {
+        padding: 50px 20px;
+    }
+    .services::before{
+       width: 100%;
+    }
+    .services .slick-next::before{
+        margin-left: -10px;
+    }
+    .services .slick-prev::before{
+        margin-right: -60px;
+    }
 }
 
 
@@ -682,7 +782,7 @@ header .banner-social a:last-child{
     justify-content: space-around;
 }
 .counter .counter-numbers .value{
-    font-size: 100px;
+    font-size: 90px;
     font-weight: bold;
     color: #404040;
     position: relative;
@@ -701,7 +801,7 @@ header .banner-social a:last-child{
 .yuzde::after{
     position: absolute;
     content: "%";
-    font-size: 100px;
+    font-size: 80px;
     font-weight: bold;
 }
 .counter .counter-numbers span{
@@ -936,6 +1036,12 @@ header .banner-social a:last-child{
     }
     
 }
+@media screen and (max-width:1200px) {
+    .how-it-works::before{
+        display: none;
+    }
+    
+}
 
 
 /*-------*/
@@ -974,6 +1080,7 @@ header .banner-social a:last-child{
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    margin: 0 20px;
 }
 .comment-section .author{
     font-weight: 600;
@@ -1086,6 +1193,10 @@ header .banner-social a:last-child{
     position: absolute;
     visibility: hidden;
 }
+.approve #ididHome{
+    position: absolute;
+    visibility: hidden;
+}
 .approve label{
     width: 20px;
     height: 20px;
@@ -1148,7 +1259,6 @@ header .banner-social a:last-child{
     display: flex;
 }
 .blog-section .blog-box{
-    height: 540px;
     width: 410px;
     margin-right: 30px;
     box-shadow: 0px 3px 6px rgba(196, 196, 196, 16%);
@@ -1180,7 +1290,7 @@ header .banner-social a:last-child{
 .blog-section .blog-box .item-content{
     padding: 20px 24px 40px 24px;
     background-color: #fff;
-    height: 100%;
+
 }
 
 .blog-section .blog-box .item-content h5{
@@ -1263,16 +1373,35 @@ header .banner-social a:last-child{
         margin-bottom: 50px;
     }
 }
+@media screen and (max-width:600px) {
+    .blog-section .slick-prev{
+        margin-left: -20px;
+    }
+}
 @media screen and (max-width:768px) {
     .blog-section{
-        padding: 50px 10px 50px 10px;
+        padding: 50px 10px 120px 10px;
     }
     .blog-section .blog-box{
-        margin: 0;
+        margin:0 20px;
+        height: auto;
     }
     .blog-section h3{
         font-size: 35px;
         margin-bottom: 30px;
+    }
+    .blog-section::before{
+        width: 100%;
+    }
+    .blog-section .slick-next{
+        left: 55%;
+    }
+    .blog-section .slick-prev{
+        left: 40%;
+    }
+    .blog-section .slick-next, .blog-section .slick-prev{
+        bottom: -15%!important;
+    
     }
 }
 
@@ -1347,7 +1476,7 @@ header .banner-social a:last-child{
 .image-content-section p{
     font-size: 25px;
     font-style: italic;
-    font-weight: 300;
+    font-weight: 200;
     line-height: 41px;
 }
 @media screen and (max-width:1000px) {
@@ -1432,10 +1561,21 @@ header .banner-social a:last-child{
     font-size: 38px;
     line-height: 44px;
 }
+.guarantee-section p span{
+    font-size: 38px;
+    font-weight: 600;
+}
 @media screen and (max-width:1200px) {
     .guarantee-section{
         padding: 40px 15px 20px 15px;
         margin: 50px 0px;
+    }
+    .guarantee-section p{
+        font-size: 25px!important;
+        line-height: 30px;
+    }
+    .guarantee-section p span{
+        font-size: 25px;
     }
 }
 @media screen and (max-width:768px) {
@@ -1444,6 +1584,10 @@ header .banner-social a:last-child{
         margin: 30px 0px 0px 0px;
     }
     .guarantee-section p{
+        font-size: 20px!important;
+        line-height: 30px;
+    }
+    .guarantee-section p span{
         font-size: 20px;
         line-height: 30px;
     }
@@ -1788,13 +1932,44 @@ header .banner-social a:last-child{
     transition: all .6s ease;
     z-index: 100;
 }
-.visible-content .btn-style-2{
+.visible-content-2{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(64, 64, 64, .67);
+    color: #fff;
+    font-size: 30px;
+    font-weight: 600;
+    opacity: 0;
+    transition: all .6s ease;
+    z-index: 100;
+}
+.visible-content .btn-style-2,
+.visible-content-2 .btn-style-2{
     color:  #fff;
     transition: .3s;
 }
 
 .our-services .box-item:hover .visible-content{
     opacity: .9;
+}
+.our-services .box-item:hover .visible-content-2{
+    opacity: .9;
+}
+.our-services .box-item:hover img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
 }
 
 .ourServicesSlide{
@@ -1833,6 +2008,74 @@ header .banner-social a:last-child{
     .ourServicesSlide h1{
         font-size: 30px;
         text-align: center;
+    }
+    
+}
+/* --- for banner --- */
+.our-services-mobile .box-item img{
+    width: 440px;
+    height: 300px;
+    object-fit: cover;
+}
+
+
+.our-services-mobile .box-item .item-content{
+    padding: 20px 24px 40px 24px;
+    background-color: #fff;
+    
+}
+
+.our-services-mobile .box-item .item-content h5{
+    font-size: 18px;
+    color: var(--main-b);
+    font-size: bold;
+    margin-bottom: 10px;
+}
+.our-services-mobile .box-item .item-content p{
+    font-size: 15px;
+    line-height: 22px;
+    margin-bottom: 20px;
+}
+
+
+@media screen and (max-width:1200px) {
+    .ourServicesSlide h1{
+        font-size: 35px;
+    }
+    .ourServices{
+        display: none;
+    }
+    .ourServicesSlide{
+        display: block;
+    }
+    .our-services .box-item {
+        height: 500px;
+        width: 300px!important;
+        margin-right: 30px;
+        margin-left: 30px;
+        box-shadow: 0px 3px 6px rgba(196, 196, 196, 16%);
+        border: 1px solid #7E7E7E;
+        transition: all .3s ease;
+        position: relative;
+        cursor: pointer;
+        margin-bottom: 30px;
+    }
+    .our-services .box-item img{
+        width: 300px;
+        height: 250px;
+        object-fit: cover;
+    }
+}
+@media screen and (max-width:768px) {
+    .ourServicesSlide h1{
+        font-size: 30px;
+        text-align: center;
+    }
+    .visible-content-2,.visible-content{
+        font-size: 22px;
+    }
+    .visible-content-2 a,.visible-content a{
+        font-size: 15px;
     }
     
 }
@@ -1918,6 +2161,7 @@ header .banner-social a:last-child{
 }
 .call-now .social .social-right a{
     color: #fff;
+    transition: all .3s ease;
 }
 .call-now .social .social-right{
     border: 1px solid #fff;
@@ -1954,6 +2198,10 @@ header .banner-social a:last-child{
 .call-now .social .social-right:hover::before{
     width: 100%;
 }
+.call-now .social .social-right:hover a{
+    color: #404040;
+}
+
 .call-now .social h5{
     font-size: 20px;
     font-weight: bold;
@@ -1980,7 +2228,7 @@ header .banner-social a:last-child{
 }
 @media screen and (max-width:768px) {
     .call-now{
-        margin: 30px;
+        margin: 30px 0px;
     }
     .call-now .social{
         flex-direction: column;
