--- a/atom-proje/frontend/css/still.css
+++ b/atom-proje/frontend/css/still.css
@@ -58,7 +58,14 @@ h3{
 .cpointer{
     cursor: pointer!important;
 }
-
+.marginH{
+    margin-top: 140px!important;
+}
+@media screen and (max-width:1200px) {
+    .marginH{
+       margin-top: 50px!important;
+    }
+}
 :root{
     --main-b:#088AD3;
     --main-y:#FECF22;
@@ -170,7 +177,7 @@ h3{
 }
 @media screen and (max-width:1200px) {
     .main .banner {
-        height: 70vh;
+        height: 80vh;
     }
     .banner::before{
         width: 100%;
@@ -202,9 +209,9 @@ header{
     display: flex;
     height: 80px;
     width: 100%;
-
+    padding: 55px 80px 0px 80px;
     align-items: center;
-    padding: 0px 100px;
+    /* padding: 0px 100px; */
     z-index: 200;
     transition: .3s;
     background-color: transparent;
@@ -435,6 +442,7 @@ header .banner-social a:last-child{
 .slide-wrapper .slide-item .content h1{
     font-size: 70px;
     font-weight: bolder;
+    letter-spacing: -4px;
 }
 .slide-wrapper .slide-item .content p{
     font-size: 18px;
@@ -491,7 +499,7 @@ header .banner-social a:last-child{
 
 .slide-wrapper .slide-item .slide-image{
     position: relative;
-    top: 100px;
+    top: 83px;
     z-index: 50;
     width: 100%;
 }
@@ -668,6 +676,7 @@ header .banner-social a:last-child{
 }
 .services-slider .item-title h5{
     font-weight: 600;
+    color: #404040;
 }
 .btn-style-2{
     color: #000;
@@ -675,9 +684,12 @@ header .banner-social a:last-child{
     font-style: italic;
     font-weight: 300;
     cursor: pointer!important;
+    font-size: 15px;
+    transition: all .6s ease;
 }
 .btn-style-2:hover{
     color: #000;
+    margin-left: 7px;
 }
 .services .slick-next, .services .slick-prev{
     z-index: 50;
@@ -702,6 +714,15 @@ header .banner-social a:last-child{
     }
     .services h3{
         font-size: 35px!important;
+    }
+    .services .slick-next{
+        right: 33%;
+    }
+}
+@media screen and (max-width:1000px) {
+   
+    .services .slick-next{
+        right: 4%;
     }
 }
 @media screen and (max-width:768px) {
@@ -820,7 +841,7 @@ header .banner-social a:last-child{
     font-weight: bold;
     color: #404040;
     position: relative;
-    margin-left: 50px;
+    
 }
 
 .counter .counter-numbers .value::before{
@@ -840,9 +861,11 @@ header .banner-social a:last-child{
 }
 .counter .counter-numbers span{
     color: #7E7E7E;
-    margin-left: 30px;
+
+    text-align: center;
 }
 @media screen and (max-width:1200px) {
+   
     .counter .counter-numbers .value{
         font-size: 75px;
     }
@@ -851,12 +874,13 @@ header .banner-social a:last-child{
     }
     .counter{
         height: auto;
+        margin-top: 70px!important;
     }
 }
 @media screen and (max-width:768px) {
     .counter .counter-numbers .value{
         font-size: 40px;
-        margin-left: 30px;
+
     }
     .counter .counter-numbers .yuzde::after{
         font-size: 40px;
@@ -960,15 +984,15 @@ header .banner-social a:last-child{
     position: absolute;
     content: "";
     right: 0;
-    top: 22%;
+    top: 24%;
     width: 6px;
     height: 358px;
     background-color: var(--main-y);
 }
 .how-it-works .box{
-    width: 265px;
+    /* width: 265px; */
     height: 232px;
-    padding: 30px 30px 0px 30px;
+    padding: 30px 32px 0px 32px;
     color: #fff;
     position: relative;
     display: flex;
@@ -977,9 +1001,11 @@ header .banner-social a:last-child{
     justify-content: center;
     cursor: pointer;
     margin-bottom: 10px;
+
 }
 .how-it-works .box:hover{
     border-bottom: 2px solid var(--main-y);
+    box-shadow: 0px 7px 10px rgba(0, 0, 0, .13);
 }
 
 .box::after{
@@ -1075,10 +1101,35 @@ header .banner-social a:last-child{
     }
     
 }
+@media screen and (max-width:1000px) {
+    .how-it-works{
+        height: auto;
+    }
+    .how-it-works .how-it-image img{
+        width: 100%!important;
+    }
+    .how-it-works .box{
+        margin: 20px auto;
+    }
+    .how-it-works .left-side h3{
+        text-align: center;
+    }
+    .how-it-works .left-side{
+        padding: 45px 50px;
+    }
+    .how-it-works::before{
+        display: none;
+    }
+    
+}
 @media screen and (max-width:767px) {
     .how-it-works{padding-bottom: 0;}
     .how-it-works .left-side{
         padding: 45px 0px;
+    }
+    .how-it-works .box{
+        width: 300px;
+        
     }
     
 }
@@ -1132,13 +1183,20 @@ header .banner-social a:last-child{
 .comment-section .author{
     font-weight: 600;
 }
-
-
-.content {
+/* .content {
     margin: auto;
     padding: 20px;
     width: 600px;
-  }
+  } */
+@media screen and (max-width:768px) {
+    .comment-section h3{
+        font-size: 30px!important;
+    }
+    .comment-section .box-item > img{
+        width: 35px;
+    }
+}
+
   
   .slider {
     margin: 30px auto 50px;
@@ -1293,7 +1351,15 @@ header .banner-social a:last-child{
         width: 100%;
     }
 }
-
+@media screen and (max-width:768px) {
+    .call-us-form .input-box input::placeholder,
+    .call-us-form .textarea textarea::placeholder{
+        font-size: 15px;
+    }
+    .call-us-form .approve a{
+        font-size: 15px;
+    }
+}
 .blog-section{
     padding: 100px 0px 150px 0px;
     position: relative;
@@ -1444,6 +1510,14 @@ header .banner-social a:last-child{
     .blog-section h3{
         margin-bottom: 50px;
     }
+    .blog-section .slick-next{
+        left: 50%;
+    }
+}
+@media screen and (max-width:1000px) {
+    .blog-section .slick-next{
+        left: 50%;
+    }
 }
 @media screen and (max-width:600px) {
     .blog-section .slick-prev{
@@ -1474,6 +1548,10 @@ header .banner-social a:last-child{
     .blog-section .slick-next, .blog-section .slick-prev{
         bottom: -15%!important;
     
+    }
+    .blog-section .slick-next::before, .blog-section .slick-prev::before{
+        width: 35px;
+        height: 35px;
     }
 }
 
@@ -1525,6 +1603,9 @@ header .banner-social a:last-child{
 }
 .breadcrumb span:first-child{
     margin-left: 0;
+}
+#title-name span{
+    margin: 0;
 }
 .before-effect::before{
     content: "";
@@ -2134,7 +2215,7 @@ header .banner-social a:last-child{
 .our-services-mobile .box-item .item-content{
     padding: 20px 24px 40px 24px;
     background-color: #fff;
-    
+    min-height: 160px!important;
 }
 
 .our-services-mobile .box-item .item-content h5{
@@ -2178,6 +2259,7 @@ header .banner-social a:last-child{
         object-fit: cover;
     }
 }
+
 @media screen and (max-width:768px) {
     .ourServicesSlide h1{
         font-size: 30px;
@@ -2244,6 +2326,9 @@ header .banner-social a:last-child{
     .services-detail .content-2{
         padding: 20px;
     }
+    .services-detail h3{
+        font-size: 25px!important;
+    }
     
 }
 
@@ -2252,6 +2337,12 @@ header .banner-social a:last-child{
 .article p{
     font-size: 18px;
     font-weight: 400;
+    color: #404040;
+}
+.article h5{
+    font-size: 18px;
+    color: #404040;
+    font-weight: 600;
 }
 
 
@@ -2801,7 +2892,7 @@ footer .all-rights .footer-mail::before{
     height: calc(100% + 200px)!important;
   }
   @media screen and (max-width:1200px) {
-    .slick-list{
+    .slide-wrapper .slick-list{
         height: auto!important;
       }
   }
